run azure functions when start:test

--- a/apps/func-incoming-responses/package.json
+++ b/apps/func-incoming-responses/package.json
@@ -38,7 +38,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "prestart": "pnpm run build",
-    "start": "func start -p 7072"
+    "start": "func start -p 7072",
+    "start:test": "func start -p 7072"
   },
   "engines": {
     "node": "=18"
