--- a/apps/func-incoming-responses/local.settings.template
+++ b/apps/func-incoming-responses/local.settings.template
@@ -8,7 +8,7 @@
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
     "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
     "SERVICE_BUS_CONNECTION_STRING": "",
-    "SERVICE_BUS_QUEUE_NAME": ""
+    "SERVICE_BUS_QUEUE_NAME": "q-cypress"
   },
   "Host": {
     "CORS": "http://pwa.klicker.com",
