chore(apps/func-*): extend local.settings.template for cypress

--- a/apps/func-response-processor/local.settings.template
+++ b/apps/func-response-processor/local.settings.template
@@ -10,6 +10,7 @@
     "SERVICE_BUS_CONNECTION_STRING": "",
     "SERVICE_BUS_QUEUE_NAME": "q-cypress",
     "REDIS_HOST": "localhost",
-    "REDIS_PORT": 6379
+    "REDIS_PORT": 6379,
+    "APP_SECRET": "abcd"
   }
 }
