upgrade backend-docker and docs, run syncpack

--- a/apps/backend-docker/tsconfig.json
+++ b/apps/backend-docker/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src"],
-  "compilerOptions": {
-    "module": "ESNext"
-  }
+  "extends": [
+    "@tsconfig/node18/tsconfig.json",
+    "@tsconfig/recommended/tsconfig.json"
+  ],
+  "include": ["src"]
 }
