--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -8,56 +8,56 @@
     "dist"
   ],
   "dependencies": {
-    "@envelop/response-cache": "4.0.8",
-    "@envelop/response-cache-redis": "2.0.8",
-    "@envelop/sentry": "5.1.1",
-    "@escape.tech/graphql-armor": "1.7.3",
-    "@graphql-yoga/plugin-csrf-prevention": "1.5.1",
-    "@graphql-yoga/plugin-persisted-operations": "1.9.1",
-    "@graphql-yoga/plugin-response-cache": "1.9.1",
-    "@graphql-yoga/redis-event-target": "1.0.0",
+    "@envelop/response-cache": "5.3.0",
+    "@envelop/response-cache-redis": "3.3.0",
+    "@envelop/sentry": "6.0.1",
+    "@escape.tech/graphql-armor": "2.3.1",
+    "@graphql-yoga/plugin-csrf-prevention": "2.0.4",
+    "@graphql-yoga/plugin-persisted-operations": "2.0.4",
+    "@graphql-yoga/plugin-response-cache": "2.1.1",
+    "@graphql-yoga/redis-event-target": "2.0.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
-    "@sentry/node": "7.52.1",
-    "@sentry/tracing": "7.52.1",
+    "@sentry/node": "7.70.0",
+    "@sentry/tracing": "7.70.0",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "express": "4.18.2",
     "graphql": "16.7.1",
-    "graphql-ws": "5.13.1",
-    "graphql-yoga": "3.9.1",
+    "graphql-ws": "5.14.0",
+    "graphql-yoga": "4.0.4",
     "ioredis": "5.3.2",
     "jsonwebtoken": "9.0.2",
     "next-auth": "4.23.1",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
-    "ws": "8.13.0"
+    "ws": "8.14.2"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^2.0.0",
-    "@tsconfig/recommended": "^1.0.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.12",
+    "@tsconfig/node18": "18.2.2",
+    "@tsconfig/recommended": "1.0.3",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
-    "@types/ioredis-mock": "^8.2.1",
-    "@types/jest": "^29.5.3",
+    "@types/ioredis-mock": "^8.2.2",
+    "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^18.17.18",
-    "@types/passport": "^1.0.10",
-    "@types/passport-jwt": "^3.0.6",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
     "@uzh-bf/design-system": "2.1.6",
-    "axios": "1.4.0",
+    "axios": "1.5.0",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
+    "dotenv": "16.3.1",
     "eslint": "8.49.0",
-    "ioredis-mock": "8.7.0",
-    "jest": "29.5.0",
+    "ioredis-mock": "8.8.3",
+    "jest": "29.7.0",
     "nodemon": "3.0.1",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "prisma": "4.14.1",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.2.0",
+    "typescript": "5.2.2"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
