--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,7 +11,7 @@
     "@docusaurus/preset-classic": "3.0.0-alpha.0",
     "@docusaurus/theme-classic": "3.0.0-alpha.0",
     "@docusaurus/theme-common": "3.0.0-alpha.0",
-    "@docusaurus/tsconfig": "*",
+    "@docusaurus/tsconfig": "0.0.0-5601",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-brands-svg-icons": "6.4.2",
     "@fortawesome/free-regular-svg-icons": "6.4.2",
@@ -19,7 +19,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@gabrielcsapo/docusaurus-plugin-matomo": "0.1.2",
     "@mdx-js/react": "2.3.0",
-    "@tsconfig/docusaurus": "1.0.5",
+    "@tsconfig/docusaurus": "2.0.1",
     "@uzh-bf/design-system": "2.1.6",
     "autoprefixer": "10.4.16",
     "cross-env": "7.0.3",
@@ -34,13 +34,13 @@
     "react-dom": "18.2.0",
     "react-medium-image-zoom": "4.4.3",
     "react-text-transition": "^3.1.0",
-    "recharts": "2.7.2",
+    "recharts": "2.8.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "0.5.9"
+    "@tailwindcss/typography": "0.5.10"
   },
   "scripts": {
     "build": "docusaurus build",
