--- a/apps/func-incoming-responses/package.json
+++ b/apps/func-incoming-responses/package.json
@@ -10,18 +10,18 @@
   "dependencies": {
     "@azure/functions": "4.0.0-alpha.11",
     "@azure/service-bus": "7.9.0",
-    "@sentry/node": "7.52.1",
+    "@sentry/node": "7.70.0",
     "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/recommended": "1.0.3",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^18.17.18",
     "@uzh-bf/design-system": "2.1.6",
     "azure-functions-core-tools": "4.0.5274",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
+    "dotenv": "16.3.1",
     "eslint": "8.49.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
