--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -13,13 +13,13 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.0",
-    "@tsconfig/recommended": "^1.0.2",
-    "@types/jest": "^29.5.3",
+    "@tsconfig/recommended": "1.0.3",
+    "@types/jest": "^29.5.5",
     "@types/node": "^18.17.18",
     "@types/ramda": "^0.29.3",
     "cross-env": "7.0.3",
     "eslint": "8.49.0",
-    "jest": "29.5.0",
+    "jest": "29.7.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "size-limit": "8.2.4",
