--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -16,13 +16,13 @@
     "@pothos/plugin-prisma": "3.56.0",
     "@pothos/plugin-scope-auth": "3.20.0",
     "@pothos/plugin-validation": "3.10.0",
-    "axios": "1.4.0",
+    "axios": "1.5.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.9",
     "generate-password": "1.7.0",
     "graphql": "16.7.1",
     "graphql-scalars": "1.22.2",
-    "graphql-yoga": "3.9.1",
+    "graphql-yoga": "4.0.4",
     "jsonwebtoken": "9.0.2",
     "mathjs": "11.9.1",
     "node-schedule": "2.1.1",
@@ -44,10 +44,10 @@
     "@parcel/watcher": "2.2.0",
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.1",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/recommended": "1.0.3",
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
+    "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^18.17.18",
     "@types/node-schedule": "^2.1.0",
@@ -56,11 +56,11 @@
     "@types/validator": "^13.9.0",
     "@types/web-push": "^3.3.2",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
+    "dotenv": "16.3.1",
     "eslint": "8.49.0",
     "graphql-codegen-persisted-query-ids": "0.1.2",
     "ioredis": "5.3.2",
-    "jest": "29.5.0",
+    "jest": "29.7.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
