--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.0",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/recommended": "1.0.3",
     "@types/node": "^18.17.18",
     "cross-env": "7.0.3",
     "eslint": "8.49.0",
