--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -14,13 +14,13 @@
     "@pothos/plugin-prisma": "3.56.0",
     "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.1",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/recommended": "1.0.3",
     "@types/bcryptjs": "^2.4.4",
     "@types/node": "^18.17.18",
     "@types/ramda": "^0.29.3",
     "bcryptjs": "2.4.3",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
+    "dotenv": "16.3.1",
     "dotenv-cli": "7.2.1",
     "eslint": "8.49.0",
     "npm-run-all": "4.1.5",
