--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -8,9 +8,9 @@
     "@klicker-uzh/markdown": "workspace:*",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.4",
-    "@tailwindcss/typography": "0.5.9",
+    "@tailwindcss/typography": "0.5.10",
     "@tsconfig/node18": "^2.0.1",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/recommended": "1.0.3",
     "@types/node": "^18.17.18",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
