--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/node18": "18.2.2",
     "@tsconfig/recommended": "1.0.3",
     "@types/jest": "^29.5.5",
     "@types/node": "^18.17.18",
