--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "dependencies": {
-    "@azure/service-bus": "7.9.0",
+    "@azure/service-bus": "7.9.1",
     "@azure/storage-blob": "12.15.0",
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
@@ -43,7 +43,7 @@
     "@graphql-typed-document-node/core": "3.2.0",
     "@parcel/watcher": "2.2.0",
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.1",
+    "@tsconfig/node18": "18.2.2",
     "@tsconfig/recommended": "1.0.3",
     "@types/bcryptjs": "^2.4.4",
     "@types/express": "^4.17.17",
