--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist"
   ],
+  "type": "module",
   "dependencies": {
     "body-parser": "1.20.2"
   },
@@ -17,7 +18,7 @@
     "eslint": "8.49.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
-    "tsup": "6.7.0",
+    "tsup": "7.2.0",
     "typescript": "5.2.2"
   },
   "peerDependencies": {
