--- a/packages/lti/tsconfig.json
+++ b/packages/lti/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src"],
-  "compilerOptions": {
-    "module": "ESNext"
-  }
+  "include": ["src"]
 }
