--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -14,6 +14,7 @@
     "@pothos/plugin-prisma": "3.60.0",
     "@tsconfig/node18": "18.2.2",
     "@types/bcryptjs": "^2.4.4",
+    "@types/fs-extra": "^11.0.2",
     "@types/node": "^18.17.18",
     "@types/ramda": "^0.29.4",
     "bcryptjs": "2.4.3",
@@ -21,6 +22,7 @@
     "dotenv": "16.3.1",
     "dotenv-cli": "7.2.1",
     "eslint": "8.49.0",
+    "fs-extra": "11.1.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
