chore(ci): directly run jest script in github actions

--- a/.github/workflows/test-grading.yml
+++ b/.github/workflows/test-grading.yml
@@ -22,5 +22,4 @@ jobs:
           run_install: true
       - name: Test functions
         shell: bash
-        run: |
-          pnpm run test
+        run: jest
