enhance(deploy): add TEAMS_WEBHOOK_URL

--- a/deploy/charts/klicker-uzh-v2/templates/secret-auth.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/secret-auth.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "chart.labels" . | nindent 4 }}
 type: Opaque
 stringData:
+  TEAMS_WEBHOOK_URL: {{ .Values.teamsWebhookUrl | quote }}
   APP_SECRET: {{ .Values.appSecret | quote }}
   DATABASE_URL: {{ .Values.backendGraphql.databaseUrl | quote }}
   EDUID_CLIENT_SECRET: {{ .Values.eduId.clientSecret | quote }}
