--- a/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "chart.labels" . | nindent 4 }}
 type: Opaque
 stringData:
+  TEAMS_WEBHOOK_URL: {{ .Values.teamsWebhookUrl | quote }}
   APP_SECRET: {{ .Values.appSecret | quote }}
   NOTIFICATION_SECRET: {{ .Values.backendGraphql.notifications.secret | quote }}
   VAPID_PUBLIC_KEY: {{ .Values.backendGraphql.vapid.publicKey | quote }}
