--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -9,6 +9,7 @@
     "@klicker-uzh/shared-components": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
     "@uzh-bf/design-system": "2.1.7",
+    "axios": "1.4.0",
     "bcryptjs": "2.4.3",
     "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.1",
