--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "dependencies": {
-    "@prisma/client": "4.14.1"
+    "@prisma/client": "5.3.1"
   },
   "devDependencies": {
     "@pothos/plugin-prisma": "3.56.0",
@@ -23,10 +23,12 @@
     "dotenv": "16.0.3",
     "dotenv-cli": "7.2.1",
     "eslint": "8.45.0",
+    "fs-extra": "11.1.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
-    "prisma": "4.14.1",
+    "prisma": "5.3.1",
+    "prisma-json-types-generator": "3.0.1",
     "ramda": "0.29.0",
     "size-limit": "8.2.4",
     "ts-node": "10.9.1",
