--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -8,7 +8,7 @@
     "dist/"
   ],
   "dependencies": {
-    "@azure/functions": "4.0.0-alpha.11",
+    "@azure/functions": "4.0.0",
     "@klicker-uzh/grading": "workspace:*",
     "@sentry/node": "7.52.1",
     "ioredis": "5.3.2",
@@ -24,7 +24,7 @@
     "@types/node": "^18.17.4",
     "@types/ramda": "^0.29.3",
     "@uzh-bf/design-system": "2.1.7",
-    "azure-functions-core-tools": "4.0.5274",
+    "azure-functions-core-tools": "4.0.5390",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "eslint": "8.45.0",
