--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -8,7 +8,7 @@
     "dist/"
   ],
   "dependencies": {
-    "@azure/functions": "4.0.0-alpha.11",
+    "@azure/functions": "4.0.0",
     "@azure/storage-blob": "12.15.0",
     "@klicker-uzh/prisma": "workspace:*",
     "axios": "1.4.0",
@@ -21,7 +21,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.4",
     "@types/uuid": "^9.0.2",
-    "azure-functions-core-tools": "4.0.5274",
+    "azure-functions-core-tools": "4.0.5390",
     "cross-env": "7.0.3",
     "eslint": "8.45.0",
     "npm-run-all": "4.1.5",
