--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -12,9 +12,9 @@
     "@azure/storage-blob": "12.15.0",
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
-    "@pothos/core": "3.33.0",
+    "@pothos/core": "3.38.0",
     "@pothos/plugin-directives": "3.10.2",
-    "@pothos/plugin-prisma": "3.56.0",
+    "@pothos/plugin-prisma": "3.60.0",
     "@pothos/plugin-scope-auth": "3.20.0",
     "@pothos/plugin-validation": "3.10.0",
     "axios": "1.4.0",
@@ -41,6 +41,7 @@
     "@graphql-codegen/typescript": "4.0.1",
     "@graphql-codegen/typescript-operations": "4.0.1",
     "@graphql-codegen/typescript-resolvers": "4.0.1",
+    "@graphql-tools/utils": "10.0.6",
     "@graphql-typed-document-node/core": "3.2.0",
     "@parcel/watcher": "2.2.0",
     "@size-limit/preset-small-lib": "8.2.4",
