--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -56,6 +56,7 @@
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "prisma": "5.3.1",
+    "ts-node": "10.9.1",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
@@ -70,7 +71,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "node -r dotenv/config dist/index.js",
-    "start:test": "nyc --silent npm start"
+    "start:test": "nyc --silent npm start",
+    "exec:prod": "doppler run --config prd -- ts-node --esm"
   },
   "engines": {
     "node": "=18"
