--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -31,6 +31,7 @@
     "next-auth": "4.22.3",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
+    "ramda": "0.29.0",
     "ws": "8.13.0"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/node": "^18.17.4",
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
+    "@types/ramda": "^0.29.3",
     "@uzh-bf/design-system": "2.1.11",
     "axios": "1.4.0",
     "cross-env": "7.0.3",
