--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@klicker-uzh/monorepo",
   "description": "KlickerUZH instant-class-response system.",
-  "version": "3.0.0-rc.77",
+  "version": "3.0.0",
   "repository": "uzh-bf/klicker-uzh.git",
   "homepage": "https://www.klicker.uzh.ch/",
   "bugs": "https://github.com/uzh-bf/klicker-uzh/issues",
@@ -34,8 +34,8 @@
     "yaml": "2.3.2"
   },
   "scripts": {
-    "//release": "standard-version --dry-run",
-    "//release:dry": "standard-version --dry-run",
+    "release": "standard-version",
+    "release:dry": "standard-version --dry-run",
     "build": "turbo run build",
     "check": "turbo run check --parallel --continue",
     "dev": "doppler run --config dev -- turbo run dev",
