--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -12,6 +12,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.17.4",
+    "@types/ramda": "^0.29.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
