--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -22,6 +22,7 @@
     "@klicker-uzh/shared-components": "workspace:*",
     "@radix-ui/react-tabs": "1.0.3",
     "@socialgouv/matomo-next": "1.6.1",
+    "@uidotdev/usehooks": "2.4.1",
     "@uzh-bf/design-system": "2.1.12",
     "body-parser": "1.20.2",
     "dayjs": "1.11.9",
