--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -1,9 +1,9 @@
 name: Klicker automated testing with cypress
 on:
   push:
-    branches: ['v3']
+    branches: ['v3', 'v3*']
   pull_request:
-    branches: ['v3']
+    branches: ['v3', 'v3*']
     types: [opened, synchronize, reopened]
   # workflow_dispatch:
 
