--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -2,9 +2,9 @@ name: Check file formatting and linting
 
 on:
   push:
-    branches: ['v3']
+    branches: ['v3', 'v3*']
   pull_request:
-    branches: ['v3']
+    branches: ['v3', 'v3*']
     types: [opened, synchronize, reopened]
 
 env:
