--- a/.github/workflows/test-grading.yml
+++ b/.github/workflows/test-grading.yml
@@ -2,9 +2,9 @@ name: Test grading package functionalities
 
 on:
   push:
-    branches: ["v3"]
+    branches: ['v3', 'v3*']
   pull_request:
-    branches: ["v3"]
+    branches: ['v3', 'v3*']
     types: [opened, synchronize, reopened]
 
 jobs:
