adjust seed for prod data

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -49,8 +49,10 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
-    "migrate:learningElements": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
-    "migrate:learningElements:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
+    "//migrate:learningElements": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
+    "//migrate:learningElements:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
+    "migrate:script": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node",
+    "migrate:script:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node",
     "prisma:deploy": "doppler run --config dev -- pnpm run prisma:deploy:raw",
     "prisma:deploy:prod": "doppler run --config prd -- pnpm run prisma:deploy:raw",
     "prisma:deploy:qa": "doppler run --config stg -- pnpm run prisma:deploy:raw",
@@ -82,6 +84,7 @@
     "seed:prod:ami": "pnpm run seed:qa:ami",
     "seed:prod:bf1": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF1.ts",
     "seed:prod:bf2": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF2.ts",
+    "seed:prod:flashcards": "ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedFlashcards.ts",
     "seed:prod:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/importQuestions.ts",
     "seed:prod:levels": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedLevels.ts",
     "seed:prod:summerSchool": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedSummerSchool.ts",
