--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/grading",
-  "version": "3.0.6",
+  "version": "3.1.0-beta.0",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
