--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/javascript-node:1-20-bullseye
+FROM mcr.microsoft.com/devcontainers/javascript-node:1-18-bullseye
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
@@ -8,5 +8,6 @@ FROM mcr.microsoft.com/devcontainers/javascript-node:1-20-bullseye
 # ARG EXTRA_NODE_VERSION=10
 # RUN su node -c "source /usr/local/share/nvm/nvm.sh && nvm install ${EXTRA_NODE_VERSION}"
 
-# [Optional] Uncomment if you want to install more global node modules
-# RUN su node -c "npm install -g <your-package-list-here>"
+RUN su node -c "npm install --global pnpm@8" \
+  && su node -c "SHELL=bash pnpm setup" \
+  && su node -c "pnpm config set store-dir /home/node/.local/share/pnpm/store"
