--- a/apps/func-migration-v2-export/package.json
+++ b/apps/func-migration-v2-export/package.json
@@ -42,6 +42,7 @@
     "node": "=18"
   },
   "volta": {
-    "extends": "../../package.json"
+    "extends": "../../package.json",
+    "node": "18.18.2"
   }
 }
