--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -50,6 +50,7 @@
     "node": "=18"
   },
   "volta": {
-    "extends": "../../package.json"
+    "extends": "../../package.json",
+    "node": "18.18.2"
   }
 }
