--- a/apps/func-migration-v2-export/package.json
+++ b/apps/func-migration-v2-export/package.json
@@ -39,10 +39,9 @@
     "start": "func start -p 7074"
   },
   "engines": {
-    "node": "=18"
+    "node": "=20"
   },
   "volta": {
-    "extends": "../../package.json",
-    "node": "18.18.2"
+    "extends": "../../package.json"
   }
 }
