--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -46,10 +46,9 @@
     "start": "func start -p 7075"
   },
   "engines": {
-    "node": "=18"
+    "node": "=20"
   },
   "volta": {
-    "extends": "../../package.json",
-    "node": "18.18.2"
+    "extends": "../../package.json"
   }
 }
