--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -47,10 +47,9 @@
     "start:test": "func start -p 7073"
   },
   "engines": {
-    "node": "=18"
+    "node": "=20"
   },
   "volta": {
-    "extends": "../../package.json",
-    "node": "18.18.2"
+    "extends": "../../package.json"
   }
 }
