--- a/.github/workflows/v3_klickeruzhprod-responses.yml
+++ b/.github/workflows/v3_klickeruzhprod-responses.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/func-incoming-responses'
-  NODE_VERSION: '18.x'
+  NODE_VERSION: '20.9.0'
 
 jobs:
   build-and-deploy:
@@ -23,7 +23,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: 8.6.12
+          version: 8.10.0
 
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
