--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -4,6 +4,7 @@
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -12,10 +13,9 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.0",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/node20": "^20.1.2",
     "@types/jest": "^29.5.3",
-    "@types/node": "^18.17.4",
+    "@types/node": "^20.8.9",
     "@types/ramda": "^0.29.3",
     "cross-env": "7.0.3",
     "eslint": "8.45.0",
@@ -24,8 +24,8 @@
     "prettier-plugin-organize-imports": "3.2.3",
     "size-limit": "8.2.4",
     "ts-jest": "29.1.0",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.2.0",
+    "typescript": "5.2.2"
   },
   "scripts": {
     "analyze": "size-limit --why",
