--- a/packages/shared-components/tsconfig.json
+++ b/packages/shared-components/tsconfig.json
@@ -1,16 +1,16 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "extends": "@tsconfig/node20/tsconfig.json",
   "exclude": ["node_modules"],
   "compilerOptions": {
     "jsx": "react",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "moduleResolution": "node",
-    "preserveWatchOutput": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "strict": true
+    "lib": ["dom", "dom.iterable", "esnext"]
+    // "esModuleInterop": true,
+    // "forceConsistentCasingInFileNames": true,
+    // "isolatedModules": true,
+    // "moduleResolution": "node",
+    // "preserveWatchOutput": true,
+    // "skipLibCheck": true,
+    // "noEmit": true,
+    // "strict": true
   }
 }
