--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -4,6 +4,7 @@
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -12,16 +13,16 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.0",
-    "@tsconfig/recommended": "^1.0.2",
-    "@types/node": "^18.17.4",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/node": "^20.8.9",
     "cross-env": "7.0.3",
     "eslint": "8.45.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "size-limit": "8.2.4",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "tsup": "7.2.0",
+    "typescript": "5.2.2"
   },
   "peerDependencies": {
     "@uzh-bf/design-system": "2.1.13",
