--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -4,22 +4,22 @@
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
   "dependencies": {
-    "@prisma/client": "5.3.1",
+    "@prisma/client": "5.5.2",
     "xml2js": "0.6.2"
   },
   "devDependencies": {
     "@pothos/plugin-prisma": "3.60.0",
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.1",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^18.17.4",
+    "@types/fs-extra": "^11.0.3",
+    "@types/node": "^20.8.9",
     "@types/ramda": "^0.29.3",
-    "@types/xml-js": "^1.0.0",
     "bcryptjs": "2.4.3",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
@@ -29,20 +29,20 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
-    "prisma": "5.3.1",
-    "prisma-json-types-generator": "3.0.1",
+    "prisma": "5.5.2",
+    "prisma-json-types-generator": "3.0.2",
     "ramda": "0.29.0",
     "size-limit": "8.2.4",
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
     "turndown": "7.1.2",
-    "typescript": "5.1.6",
+    "typescript": "5.2.2",
     "uuidv4": "6.2.13"
   },
   "scripts": {
     "analyze": "size-limit --why",
     "build": "run-s generate build:ts build:copy",
-    "build:copy": "node src/copy.js",
+    "build:copy": "node src/copy.cjs",
     "build:ts": "cross-env NODE_ENV=production tsup",
     "build:watch": "cross-env NODE_ENV=development tsup --watch",
     "check": "tsc --noEmit",
