upgrade node types and prisma in apps/

--- a/apps/func-incoming-responses/package.json
+++ b/apps/func-incoming-responses/package.json
@@ -14,10 +14,9 @@
     "jsonwebtoken": "9.0.1"
   },
   "devDependencies": {
-    "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/node20": "^20.1.2",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.17.4",
+    "@types/node": "^20.8.9",
     "@uzh-bf/design-system": "2.1.13",
     "azure-functions-core-tools": "4.0.5390",
     "cross-env": "7.0.3",
