--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -17,11 +17,10 @@
     "ramda": "0.29.0"
   },
   "devDependencies": {
-    "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/node20": "^20.1.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/md5": "2.3.2",
-    "@types/node": "^18.17.4",
+    "@types/node": "^20.8.9",
     "@types/ramda": "^0.29.3",
     "@uzh-bf/design-system": "2.1.13",
     "azure-functions-core-tools": "4.0.5390",
