--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -17,9 +17,9 @@
     "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@tsconfig/node18": "18.2.0",
+    "@tsconfig/node20": "^20.1.2",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.17.4",
+    "@types/node": "^20.8.9",
     "@types/uuid": "^9.0.2",
     "azure-functions-core-tools": "4.0.5390",
     "cross-env": "7.0.3",
@@ -27,7 +27,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
-    "prisma": "5.3.1",
+    "prisma": "5.5.2",
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
     "typescript": "5.1.6"
