--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -4,6 +4,7 @@
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -45,13 +46,12 @@
     "@graphql-typed-document-node/core": "3.2.0",
     "@parcel/watcher": "2.2.0",
     "@size-limit/preset-small-lib": "8.2.4",
-    "@tsconfig/node18": "^2.0.1",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.17.4",
+    "@types/node": "^20.8.9",
     "@types/node-schedule": "^2.1.0",
     "@types/ramda": "^0.29.3",
     "@types/uuid": "^9.0.2",
@@ -70,7 +70,7 @@
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
     "tsup": "7.2.0",
-    "typescript": "5.1.6",
+    "typescript": "5.2.2",
     "web-push": "3.6.1"
   },
   "scripts": {
