prisma package import fixes, bun run, and removal of ts-node

--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "prisma:reset": "pnpm run --filter @klicker-uzh/prisma prisma:reset",
     "prisma:setup": "pnpm run --filter @klicker-uzh/prisma prisma:setup",
     "prisma:studio": "pnpm run --filter @klicker-uzh/prisma prisma:studio",
-    "prune": "turbo prune",
     "publish": "turbo run publish",
     "release:alpha": "standard-version --prerelease alpha --no-verify",
     "release:alpha:dry": "standard-version --dry-run --prerelease alpha",
@@ -67,7 +66,8 @@
     "syncpack:mismatches:fix": "syncpack fix-mismatches",
     "syncpack:update": "syncpack update",
     "test": "turbo run test",
-    "test:run": "turbo run test:run"
+    "test:run": "turbo run test:run",
+    "turbo": "turbo"
   },
   "engines": {
     "node": "=20"
