--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -14,7 +14,6 @@
   },
   "devDependencies": {
     "@pothos/plugin-prisma": "3.60.0",
-    "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node20": "^20.1.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/fs-extra": "^11.0.3",
@@ -32,8 +31,6 @@
     "prisma": "5.5.2",
     "prisma-json-types-generator": "3.0.2",
     "ramda": "0.29.0",
-    "size-limit": "8.2.4",
-    "ts-node": "10.9.1",
     "tsup": "7.2.0",
     "turndown": "7.1.2",
     "typescript": "5.2.2",
@@ -49,10 +46,10 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
-    "//migrate:learningElements": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
-    "//migrate:learningElements:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
-    "migrate:script": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node",
-    "migrate:script:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node",
+    "//migrate:learningElements": "cross-env ENV=development doppler run --config dev -- bun run src/scripts/migrateLearningElements.ts",
+    "//migrate:learningElements:prod": "cross-env ENV=development doppler run --config prd -- bun run src/scripts/migrateLearningElements.ts",
+    "migrate:script": "cross-env ENV=development doppler run --config dev -- bun run",
+    "migrate:script:prod": "cross-env ENV=development doppler run --config prd -- bun run",
     "prisma:deploy": "doppler run --config dev -- pnpm run prisma:deploy:raw",
     "prisma:deploy:prod": "doppler run --config prd -- pnpm run prisma:deploy:raw",
     "prisma:deploy:qa": "doppler run --config stg -- pnpm run prisma:deploy:raw",
@@ -74,26 +71,25 @@
     "prisma:studio:prod": "doppler run --config prd -- pnpm run prisma:studio:raw",
     "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
     "prisma:studio:raw": "prisma studio --schema=src/prisma/schema.prisma",
-    "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
-    "seed:achievements": "ENV=development doppler run --config dev -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
-    "seed:flashcards": "ENV=development doppler run --config dev -- ts-node --esm --experimental-specifier-resolution=node src/data/seedFlashcards.ts",
-    "seed:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config dev -- ts-node --esm --experimental-specifier-resolution=node src/data/importQuestions.ts",
-    "seed:mockExamPoints": "ENV=production doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/parseMockExamPoints.ts",
-    "seed:prod": "ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
-    "seed:prod:achievements": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
+    "seed": "cross-env ENV=development doppler run --config dev -- run-s build seed:test",
+    "seed:achievements": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedAchievements.ts",
+    "seed:flashcards": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedFlashcards.ts",
+    "seed:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config dev -- bun run src/data/importQuestions.ts",
+    "seed:mockExamPoints": "cross-env ENV=production doppler run --config prd -- bun run src/scripts/parseMockExamPoints.ts",
+    "seed:prod": "cross-env ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
+    "seed:prod:achievements": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedAchievements.ts",
     "seed:prod:ami": "pnpm run seed:qa:ami",
-    "seed:prod:bf1": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF1.ts",
-    "seed:prod:bf2": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF2.ts",
-    "seed:prod:flashcards": "ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedFlashcards.ts",
-    "seed:prod:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/importQuestions.ts",
-    "seed:prod:levels": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedLevels.ts",
-    "seed:prod:summerSchool": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedSummerSchool.ts",
-    "seed:prod:user": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedUser.ts",
-    "seed:qa": "ENV=development doppler run --config stg -- npm-run-all seed:qa:test",
-    "seed:qa:bf1": "ENV=development doppler run --config stg -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF1.ts",
-    "seed:qa:test": "ts-node --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
-    "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
-    "size": "size-limit"
+    "seed:prod:bf1": "cross-env ENV=development doppler run --config prd -- bun run src/data/seedBF1.ts",
+    "seed:prod:bf2": "cross-env ENV=development doppler run --config prd -- bun run src/data/seedBF2.ts",
+    "seed:prod:flashcards": "cross-env ENV=development doppler run --config prd -- bun run src/data/seedFlashcards.ts",
+    "seed:prod:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config prd -- bun run src/data/importQuestions.ts",
+    "seed:prod:levels": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedLevels.ts",
+    "seed:prod:summerSchool": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedSummerSchool.ts",
+    "seed:prod:user": "cross-env ENV=production doppler run --config prd -- bun run src/data/seedUser.ts",
+    "seed:qa": "cross-env ENV=development doppler run --config stg -- npm-run-all seed:qa:test",
+    "seed:qa:bf1": "cross-env ENV=development doppler run --config stg -- bun run src/data/seedBF1.ts",
+    "seed:qa:test": "bun run src/data/seedTEST.ts",
+    "seed:test": "cross-env ENV=development doppler run --config dev -- bun run src/data/seedTEST.ts"
   },
   "engines": {
     "node": "=20"
@@ -103,11 +99,5 @@
   },
   "prisma": {
     "seed": "pnpm run seed"
-  },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "10 KB"
-    }
-  ]
+  }
 }
