--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -57,7 +57,6 @@
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "prisma": "5.5.2",
-    "ts-node": "10.9.1",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
@@ -73,7 +72,7 @@
     "format:check": "prettier --check .",
     "start": "node -r dotenv/config dist/index.js",
     "start:test": "nyc --silent npm start",
-    "exec:prod": "doppler run --config prd -- ts-node --esm"
+    "exec:prod": "doppler run --config prd -- bun run"
   },
   "engines": {
     "node": "=20"
