--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -45,9 +45,7 @@
     "@graphql-tools/utils": "10.0.6",
     "@graphql-typed-document-node/core": "3.2.0",
     "@parcel/watcher": "2.2.0",
-    "@size-limit/preset-small-lib": "8.2.4",
     "@tsconfig/node18": "^2.0.1",
-    "@tsconfig/recommended": "^1.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
@@ -67,15 +65,11 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
-    "size-limit": "8.2.4",
-    "ts-node": "10.9.1",
-    "ts-node-dev": "2.0.0",
     "tsup": "7.2.0",
     "typescript": "5.1.6",
     "web-push": "3.6.1"
   },
   "scripts": {
-    "analyze": "size-limit --why",
     "build": "run-s generate build:ts",
     "build:ts": "cross-env NODE_ENV=production tsup --dts",
     "check": "tsc --noEmit",
@@ -85,23 +79,12 @@
     "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "generate": "graphql-codegen --config codegen.ts",
-    "size": "size-limit"
+    "generate": "graphql-codegen --config codegen.ts"
   },
   "engines": {
     "node": "=20"
   },
   "volta": {
     "extends": "../../package.json"
-  },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/ops.js",
-      "limit": "10 KB"
-    }
-  ]
+  }
 }
