add consistency checker script

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -49,10 +49,6 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
-    "//migrate:learningElements": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
-    "//migrate:learningElements:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
-    "migrate:script": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node",
-    "migrate:script:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node",
     "prisma:deploy": "doppler run --config dev -- pnpm run prisma:deploy:raw",
     "prisma:deploy:prod": "doppler run --config prd -- pnpm run prisma:deploy:raw",
     "prisma:deploy:qa": "doppler run --config stg -- pnpm run prisma:deploy:raw",
@@ -74,6 +70,8 @@
     "prisma:studio:prod": "doppler run --config prd -- pnpm run prisma:studio:raw",
     "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
     "prisma:studio:raw": "prisma studio --schema=src/prisma/schema.prisma",
+    "script": "ENV=development doppler run --config dev -- bun run",
+    "script:prod": "ENV=production doppler run --config prd -- bun run",
     "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
     "seed:achievements": "ENV=development doppler run --config dev -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
     "seed:flashcards": "ENV=development doppler run --config dev -- ts-node --esm --experimental-specifier-resolution=node src/data/seedFlashcards.ts",
